2004-07-28 Tanya Wolff

	Fix for PR 70161: Assembly untranslated in C++ File Types
	* plugin.properties
	* plugin.xml

2004-07-26 Vladimir Hirsl

	HP-UX SOM Binary parser patch

	* utils/org/eclipse/cdt/utils/com/SOM.java

2004-07-20 Alain Magloire
	Fix for PR 70449
	* src/org/eclipse/cdt/core/internal/filetype/ResolverModel.java

2004-07-16 Alain Magloire

	Fix for PR 70255

	* model/org/eclipse/cdt/internal/core/model/Binary.java

2004-07-16 Brad Jarvinen

	Fix Pr 70252

	* src/org/eclipse/cdt/internal/errorparsers/GCCErrorParser.java

2004-07-16 Vladimir Hirsl
	1. Implementation of HP-UX SOM binary parser.
                                                                                                                             
	* utils/org/eclipse/cdt/utils/som/AR.java
	* utils/org/eclipse/cdt/utils/som/SOM.java
                                                                                                                             
	* utils/org/eclipse/cdt/utils/som/parser/ARMember.java
	* utils/org/eclipse/cdt/utils/som/parser/BinaryArchive.java
	* utils/org/eclipse/cdt/utils/som/parser/SOMParser.java
	* utils/org/eclipse/cdt/utils/som/parser/SOMBinaryObject.java
	* utils/org/eclipse/cdt/utils/som/parser/SomSymbol.java
                                                                                                                             
	2. Fixed a slight ommision in XXXBinaryObject classes
                                                                                                                             
	* utils/org/eclipse/cdt/utils/coff/parser/CygwinPEBinaryObject.java
	* utils/org/eclipse/cdt/utils/elf/parser/GNUElfBinaryObject.java
	* utils/org/eclipse/cdt/utils/xcoff/parser/XCOFFBinaryObject.java

2004-07-15 Alain Magloire

	Check for Empty path in the binary and copy the []IPathEntry
	for the manager.

	* model/org/eclipse/cdt/internal/core/model/Binary.java
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java
